[update] cors config 수정